# claude_code-multi-AI-MCP

./: .gitignore  README.md  pyproject.toml  setup.sh
multi_ai_collab/: cli.py  server.py
