[project]
name = "multi-ai-collab"
version = "2.1.0"
description = "MCP server giving Claude Code direct access to Gemini, Grok, and DeepSeek"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "google-generativeai>=0.8.5",
    "openai>=1.0.0",
]

[project.scripts]
multi-ai-collab = "multi_ai_collab.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
