[project]
name = "multi-ai-collab"
version = "2.1.1"
description = "MCP server giving Claude Code direct access to Gemini, Grok, and DeepSeek"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "google-generativeai==0.8.6",
    "openai==2.35.1",
]

[project.scripts]
multi-ai-collab = "multi_ai_collab.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
